--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -1,38 +1,30 @@
 on:
-  push:
-    paths-ignore:
-      - 'README.md'
-    branches-ignore:
-      - 'main'
-      - 'staging'
+ push:
+   paths-ignore:
+     - 'README.md'
+   branches-ignore:
+     - 'main'
 
 jobs:
+    build_test:
+      name: Build and run tests
+      runs-on: windows-latest
+      steps:
+        - uses: actions/checkout@v2
 
-  build_test:
-    name: Build and run tests
-    runs-on: windows-latest
-    environment: ${{ needs.setup.outputs.build_env }}
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup .NET 6
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '6.0.x'
-
-      - id: unittest
-        name: Unit Tests
-        working-directory: MyWebApiTest
-        run: |
-          $unitTestFilePath = "${{ env.RUNNER_TEMP }}\TestResults\unittests.xml"            
-          dotnet test --logger "junit;LogFilePath=$unitTestFilePath"
-
-      - name: Publish test results
-        if: ${{ always() }}
-        uses: EnricoMi/publish-unit-test-result-action/composite@v1
-        with:
-          files: ${{ env.RUNNER_TEMP }}/TestResults/*.xml
-
-      - uses: kheiakiyama/install-azcopy-action@v1
-        with:
-          version: 'v10'
+        - name: Setup .NET 6
+          uses: actions/setup-dotnet@v1
+          with:
+            dotnet-version: '6.0.x'
+        
+        - id: unittest
+          name: Unit tests
+          working-directory: MyWebApiTest
+          run: |
+            $unitTestFilePath = "${{ env.RUNNER_TEMP }}\TestResults\unittests.xml"            
+            dotnet test --logger "junit;LogFilePath=$unitTestFilePath"
+        
+        - name: Publish test \TestResults
+          uses: EnricoMi/publish-unit-test-result-action/composite@v1
+          with:
+            files: ${{ env.RUNNER_TEMP }}\TestResults\unittests.xml
